--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,207 @@
-body {}
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #303133;
+  
 
-.search-form {}
+}
+.bg-image {
+    background-image: url('https://picsum.photos/1920/1080');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.search-form {
+  z-index: 3;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  padding: 30px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #303133;
+    background-blend-mode: multiply;
+}
+
+.search-form-active {
+  position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+
+    display: flex;
+    padding: 5px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  
+    background-color: #303133;
+    background-blend-mode: multiply;
+}
+
+
+
+input {
+  margin-right: 40px;
+  padding-left: 10px;
+
+  border-top: none;
+  border-right: none;
+  border-left: none;
+
+  background-color: transparent;
+  width: 40%;
+  font-size: 30px;
+  color: white;
+  outline: none;
+
+  transform: scale(1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover, &:focus {
+    transform: scale(1.1);
+  }
+}
+
+::placeholder {
+  color: white;
+}
+
+.border-button {
+  text-decoration: none;
+  display: inline-block;
+  padding: 20px 30px;
+  margin: 10px 20px;
+  position: relative;
+  color: white;
+  border: 1px solid rgba(255, 255, 255, .4);
+  background: none;
+  font-weight: 300;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.border-button:before,
+.border-button:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  box-sizing: border-box;
+}
+
+.border-button:before {
+  bottom: 0;
+  left: 0;
+  border-left: 1px solid white;
+  border-top: 1px solid white;
+  transition: 0s ease opacity .8s, .2s ease width .4s, .2s ease height .6s;
+}
+
+.border-button:after {
+  top: 0;
+  right: 0;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  transition: 0s ease opacity .4s, .2s ease width, .2s ease height .2s;
+}
+
+.border-button:hover:before,
+.border-button:hover:after {
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+}
+
+.border-button:hover:before {
+  transition: 0s ease opacity 0s, .2s ease height, .2s ease width .2s;
+}
+
+.border-button:hover:after {
+  transition: 0s ease opacity .4s, .2s ease height .4s, .2s ease width .6s;
+}
+
+.border-button:hover {
+  background: rgba(255, 255, 255, .2);
+}
+
 
 .gallery {
+z-index: 1;
+margin-top: 100px;
+display: flex;
+flex-wrap: wrap;
+gap: 10px;
+}
+
+
+
+.photo-card {
+  position: relative;
+  width: calc((100% - 30px) / 4);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.image {
+  opacity: 1;
+  display: inline-block;
+  width: 100%;
+  height: auto;
+  transition: .3s ease;
+  backface-visibility: hidden;
+}
+
+.info {
+  color: white;
+  pointer-events: none;
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.photo-card:hover .image {
+  opacity: 0.3;
+}
+
+.photo-card:hover .info {
+  opacity: 1;
+}
+
+.info-item {
+
+  font-size: 20px;
+}
+b {
+  margin-left: 10px;
+}
+
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.load-more {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
